refactor(Mudando de tecnologia): :ambulance: Mudano de scss para css
Tive que mudar por causa do grid

--- a/jean.io/.gitignore
+++ b/jean.io/.gitignore
@@ -162,7 +162,7 @@ sketch
 .sass-cache/
 *.css.map
 *.sass.map
-*.scss.map
+*.css.map
 
 ### yarn ###
 # https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
