feat(Refatoração de Codigo): :art: Abstraindo o codigo
Foi trocado os class por ClassName porque é do react e abstraindo o código da seção projetos

--- a/jean.io/.vscode/settings.json
+++ b/jean.io/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "conventionalCommits.scopes": [
-    "Mudando de tecnologia"
+    "Mudando de tecnologia",
+    "Refatoração de Codigo"
   ]
 }
