fix(Refatoração de Codigo): :zap: Alteração de tech
Alterando site de HTML e CSS para React

--- a/jean.io/.vscode/settings.json
+++ b/jean.io/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "conventionalCommits.scopes": [
     "Mudando de tecnologia",
-    "Refatoração de Codigo"
+    "Refatoração de Codigo",
+    "Nova Versão 2.0.0"
   ]
 }
