fix(Style css): :bug: Bug imagem do header
Bug imagem do header, que estava desalinhado com  a apresentação

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "conventionalCommits.scopes": [
     "Mudando de tecnologia",
     "Refatoração de Codigo",
-    "Nova Versão 2.0.0"
+    "Nova Versão 2.0.0",
+    "Style css"
   ]
 }
